# TEME-IEP

./: README.md
Lab/test/: run.bat
Lab/test/src/: CMakeLists.txt  main.cpp
Lab/test/src/Paper/: CMakeLists.txt  Paper.cpp  Paper.hpp
Lab/test/src/Pen/: CMakeLists.txt  Pen.cpp  Pen.hpp
iep/: CMakeLists.txt
iep/src/: Masina.cpp  Vehicul.cpp  Vehicul1.cpp  Vehicul3.cpp  main.cpp
iep3/: CMakeLists.txt
iep3/src/: item13&14.cpp
